--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,10 @@
 <ion-header>
 
-  <ion-navbar color="toolbar">
-    <ion-title>Iniciar Sesión</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      <span *ngIf="login">Iniciar Sesión</span>
+      <span *ngIf="!login">Registrarse</span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -11,38 +14,33 @@
   <div id="avatarLogin">
     <ion-row>
       <ion-col col-6 offset-3>
-        <div class="avatarFrameOffLine">
+        <div class="avatarFrame avatarFrameOffLine">
           <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
         </div>
       </ion-col>
     </ion-row>
   </div>
 
-  <ion-list>
+  <ion-list margin-top>
 
-    <ion-item>
-      <ion-label fixed>Nickname</ion-label>
-      <ion-input type="text" value=""></ion-input>
+    <ion-item *ngIf="!login">
+      <ion-label stacked>Usuario</ion-label>
+      <ion-input type="text" value="" [(ngModel)]="user.displayName"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label fixed>Email</ion-label>
-      <ion-input type="email" value=""></ion-input>
+      <ion-label stacked>Correo electrónico</ion-label>
+      <ion-input type="email" value="" [(ngModel)]="user.email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label fixed>Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label fixed>Repetir</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-label stacked>Contraseña</ion-label>
+      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label fixed>Status</ion-label>
-      <ion-select>
+      <ion-select [(ngModel)]="user.status">
         <ion-option value="online">Conectado</ion-option>
         <ion-option value="away">Ausente</ion-option>
         <ion-option value="busy">Ocupado</ion-option>
@@ -50,13 +48,21 @@
       </ion-select>
     </ion-item>
 
+    <ion-item>
+      <ion-label fixed>Recordarme</ion-label>
+      <ion-checkbox color="toolbar"></ion-checkbox>
+    </ion-item>
   </ion-list>
 
   <div padding>
-    <p>¿Ya tienes cuenta? Click aquí</p>
-    <p>Aún no tienes cuenta? Click aquí</p>
+    <a class="pointer" (click)="login=!login" *ngIf="!login">¿Ya tienes cuenta? Inicia sesión.</a>
+    <a class="pointer" (click)="login=!login" *ngIf="login">¿Aún no tienes cuenta? Crea una cuenta.</a>
     <hr>
-    <button ion-button block round>Ingresar</button>
-    <button ion-button block round>Registrarse</button>
+    <button *ngIf="!login" ion-button block round (click)="emailSignUp()">Registrarse</button>
+    <button *ngIf="login" ion-button block round (click)="emailLogin()">Ingresar</button>
+    <button color="facebook" ion-button block round>
+      <ion-icon name="logo-facebook"></ion-icon>&nbsp;
+      Ingresar con Facebook
+    </button>
   </div>
 </ion-content>
