--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -40,7 +40,7 @@
       <ion-avatar item-start>
         <img src="assets/img/{{ getIconByStatus( user.status ) }}.png">
       </ion-avatar>
-      <h2>{{ user.name }}</h2>
+      <h2>{{ user.displayName }}</h2>
       <span> <small>{{ user.status }}</small> </span>
 
     </ion-item>
