--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,10 +41,10 @@
     <ion-item>
       <ion-label fixed>Status</ion-label>
       <ion-select [(ngModel)]="user.status">
-        <ion-option value="online">Conectado</ion-option>
-        <ion-option value="away">Ausente</ion-option>
-        <ion-option value="busy">Ocupado</ion-option>
-        <ion-option value="appear_offline">Desconectado</ion-option>
+        <ion-option value="Online">Conectado</ion-option>
+        <ion-option value="Away">Ausente</ion-option>
+        <ion-option value="Busy">Ocupado</ion-option>
+        <ion-option value="AppearOffline">Desconectado</ion-option>
       </ion-select>
     </ion-item>
 
