--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,21 +24,22 @@
   <ion-list margin-top>
 
     <ion-item *ngIf="!login">
-      <ion-label stacked>Usuario</ion-label>
-      <ion-input type="text" value="" [(ngModel)]="user.displayName"></ion-input>
+      <ion-icon name="person" item-start></ion-icon>
+      <ion-input type="text" placeholder="Usuario" value="" [(ngModel)]="user.displayName"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label stacked>Correo electrónico</ion-label>
-      <ion-input type="email" value="" [(ngModel)]="user.email"></ion-input>
+      <ion-icon name="mail" item-start></ion-icon>
+      <ion-input type="email" placeholder="Correo electrónico" value="" [(ngModel)]="user.email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label stacked>Contraseña</ion-label>
-      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+      <ion-icon name="lock" item-start></ion-icon>
+      <ion-input type="password" placeholder="Contraseña" [(ngModel)]="user.password"></ion-input>
     </ion-item>
 
     <ion-item>
+      <ion-icon name="cloud-circle" item-start></ion-icon>
       <ion-label fixed>Status</ion-label>
       <ion-select [(ngModel)]="user.status">
         <ion-option value="Online">Conectado</ion-option>
@@ -55,8 +56,10 @@
   </ion-list>
 
   <div padding>
-    <a class="pointer" (click)="login=!login" *ngIf="!login">¿Ya tienes cuenta? Inicia sesión.</a>
-    <a class="pointer" (click)="login=!login" *ngIf="login">¿Aún no tienes cuenta? Crea una cuenta.</a>
+    <div text-center margin-bottom>
+      <a class="pointer" (click)="login=!login" *ngIf="!login">¿Ya tienes cuenta? Inicia sesión.</a>
+      <a class="pointer" (click)="login=!login" *ngIf="login">¿Aún no tienes cuenta? Crea una cuenta.</a>
+    </div>
     <hr>
     <button *ngIf="!login" ion-button block round (click)="emailSignUp()">Registrarse</button>
     <button *ngIf="login" ion-button block round (click)="emailLogin()">Ingresar</button>
