--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,50 +10,50 @@
 
 </ion-header>
 
-<ion-content class="background-msn" text-center *ngIf="!user">
-  <div class="load-spinner">
-    <ion-spinner name="bubbles" color="secondary"></ion-spinner>
-  </div>
-</ion-content>
-
 <ion-content class="background-msn" *ngIf="user">
 
-  <div id="avatarLogin">
-    <ion-row>
-      <ion-col col-6 offset-3>
-        <div class="avatarFrame avatarFrameOffLine">
-          <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
-        </div>
-      </ion-col>
-    </ion-row>
+  <div class="load-spinner" text-center *ngIf="!user">
+    <ion-spinner name="bubbles" color="secondary"></ion-spinner>
   </div>
 
-  <ion-list margin-top>
+  <div *ngIf="user">
+    <div id="avatarLogin">
+      <ion-row>
+        <ion-col col-6 offset-3>
+          <div class="avatarFrame avatarFrameOffLine">
+            <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
+          </div>
+        </ion-col>
+      </ion-row>
+    </div>
 
-    <ion-item>
-      <ion-icon name="mail" item-start></ion-icon>
-      {{ user.email }}
-    </ion-item>
+    <ion-list margin-top>
 
-    <ion-item>
-      <ion-icon name="person" item-start></ion-icon>
-      <ion-input type="text" placeholder="Usuario" [(ngModel)]="user.displayName"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-icon name="mail" item-start></ion-icon>
+        {{ user.email }}
+      </ion-item>
 
-    <ion-item>
-      <ion-icon name="cloud-circle" item-start></ion-icon>
-      <ion-label fixed>Status</ion-label>
-      <ion-select [(ngModel)]="user.status">
-        <ion-option value="Online">Conectado</ion-option>
-        <ion-option value="Away">Ausente</ion-option>
-        <ion-option value="Busy">Ocupado</ion-option>
-        <ion-option value="AppearOffline">Desconectado</ion-option>
-      </ion-select>
-    </ion-item>
+      <ion-item>
+        <ion-icon name="person" item-start></ion-icon>
+        <ion-input type="text" placeholder="Usuario" [(ngModel)]="user.displayName"></ion-input>
+      </ion-item>
 
-  </ion-list>
+      <ion-item>
+        <ion-icon name="cloud-circle" item-start></ion-icon>
+        <ion-label fixed>Status</ion-label>
+        <ion-select [(ngModel)]="user.status">
+          <ion-option value="Online">Conectado</ion-option>
+          <ion-option value="Away">Ausente</ion-option>
+          <ion-option value="Busy">Ocupado</ion-option>
+          <ion-option value="AppearOffline">Desconectado</ion-option>
+        </ion-select>
+      </ion-item>
 
-  <div padding>
-    <button ion-button block round (click)="updateUser()">Guardar cambios</button>
+    </ion-list>
+
+    <div padding>
+      <button ion-button block round (click)="updateUser()">Guardar cambios</button>
+    </div>
   </div>
 </ion-content>
