--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,9 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>
+    <ion-title text-center >
       <span *ngIf="login">Iniciar Sesión</span>
-      <span *ngIf="!login">Registrarse</span>
+      <span *ngIf="!login">Crear una cuenta</span>
     </ion-title>
   </ion-navbar>
 
@@ -11,35 +11,31 @@
 
 
 <ion-content padding class="background-msn bposy0">
-  <div id="avatarLogin">
-    <ion-row>
-      <ion-col col-6 offset-3>
-        <div class="avatarFrame avatarFrameOffLine">
-          <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
-        </div>
-      </ion-col>
-    </ion-row>
+  <div id="avatarLogin" text-center>
+    <div class="avatarFrame avatarFrameOffLine">
+      <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
+    </div>
   </div>
 
   <ion-list margin-top>
 
     <ion-item *ngIf="!login">
-      <ion-icon name="person" item-start></ion-icon>
+      <ion-icon color="strong" name="person" item-start></ion-icon>
       <ion-input type="text" placeholder="Usuario" value="" [(ngModel)]="user.displayName"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="mail" item-start></ion-icon>
+      <ion-icon color="strong" name="mail" item-start></ion-icon>
       <ion-input type="email" placeholder="Correo electrónico" value="" [(ngModel)]="user.email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="lock" item-start></ion-icon>
+      <ion-icon color="strong" name="lock" item-start></ion-icon>
       <ion-input type="password" placeholder="Contraseña" [(ngModel)]="user.password"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="cloud-circle" item-start></ion-icon>
+      <ion-icon color="strong" name="cloud-circle" item-start></ion-icon>
       <ion-label fixed>Status</ion-label>
       <ion-select [(ngModel)]="user.status">
         <ion-option value="Online">Conectado</ion-option>
@@ -57,12 +53,15 @@
 
   <div padding>
     <div text-center margin-bottom>
-      <a class="pointer" (click)="login=!login" *ngIf="!login">¿Ya tienes cuenta? Inicia sesión.</a>
+      <a class="pointer" color="strong" (click)="login=!login" *ngIf="!login">¿Ya tienes cuenta? Inicia sesión.</a>
       <a class="pointer" (click)="login=!login" *ngIf="login">¿Aún no tienes cuenta? Crea una cuenta.</a>
     </div>
     <hr>
     <button *ngIf="!login" ion-button block round (click)="emailSignUp()">Registrarse</button>
     <button *ngIf="login" ion-button block round (click)="emailLogin()">Ingresar</button>
+    <div text-center margin-bottom>
+      <a class="pointer" color="strong" (click)="resetPassword()" *ngIf="login">Olvide mi contraseña.</a>
+    </div>
     <button color="facebook" ion-button block round (click)="signInWithFacebook()">
       <ion-icon name="logo-facebook"></ion-icon>&nbsp;
       Ingresar con Facebook
