--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,30 +17,30 @@
   </div>
 
   <div *ngIf="user">
-    <div id="avatarLogin">
-      <ion-row>
-        <ion-col col-6 offset-3>
-          <div class="avatarFrame avatarFrameOffLine">
-            <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
-          </div>
-        </ion-col>
-      </ion-row>
+    <div id="avatarLogin" text-center>
+      <div class="avatarFrame"
+                      [ngClass]="{ 'avatarFrameOnline' : user.status === 'Online',
+                                    'avatarFrameOffLine' : offlineStatus.includes( user.status ),
+                                    'avatarFrameaway' : user.status === 'Away',
+                                    'avatarFramebusy' : user.status === 'Busy' }" >
+        <img src="assets/img/generic_avatar.png" class="avatarImg img-fluid">
+      </div>
     </div>
 
     <ion-list margin-top>
 
       <ion-item>
-        <ion-icon name="mail" item-start></ion-icon>
+        <ion-icon color="strong" name="mail" item-start></ion-icon>
         {{ user.email }}
       </ion-item>
 
       <ion-item>
-        <ion-icon name="person" item-start></ion-icon>
+        <ion-icon color="strong" name="person" item-start></ion-icon>
         <ion-input type="text" placeholder="Usuario" [(ngModel)]="user.displayName"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-icon name="cloud-circle" item-start></ion-icon>
+        <ion-icon color="strong" name="cloud-circle" item-start></ion-icon>
         <ion-label fixed>Status</ion-label>
         <ion-select [(ngModel)]="user.status">
           <ion-option value="Online">Conectado</ion-option>
