Implementando el recuerdame y verifcando el update

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,7 +5,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
 
-    <ion-title>about</ion-title>
+    <ion-title>Acerca</ion-title>
   </ion-navbar>
 
 </ion-header>
