--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -5,12 +5,12 @@
       <ion-icon name="menu"></ion-icon>
     </button>
 
-    <ion-title>profile</ion-title>
+    <ion-title>Perfil</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-<ion-content class="background-msn" *ngIf="user">
+<ion-content class="background-msn">
 
   <div class="load-spinner" text-center *ngIf="!user">
     <ion-spinner name="bubbles" color="secondary"></ion-spinner>
